--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2706,7 +2706,7 @@ input, select, textarea {
 					}
 
 			.tiles article.style1 > .image:before {
-				background-color: #2c1999;
+				background-color: #404041;
 			}
 
 			.tiles article.style2 > .image:before {
