--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
+	
 }
 
 ol, ul {
@@ -99,7 +100,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #ffffff;
+		background: #ebcee2;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -3169,7 +3170,7 @@ input, select, textarea {
 
 	#footer {
 		padding: 5em 0 6em 0 ;
-		background-color: #f6f6f6;
+		background-color: #f09cdb;
 	}
 
 		#footer > .inner {
